--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "d3": "^5.16.0",
     "d3-array": "^2.4.0",
     "rxjs": "~6.5.1",
+    "three": "^0.116.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
