--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
     "@ionic/angular": "^5.0.0",
     "@tensorflow/tfjs": "^1.7.2",
     "core-js": "^2.5.4",
+    "cornerstone-core": "^2.3.0",
+    "cornerstone-tools": "^4.15.1",
+    "cornerstone-wado-image-loader": "^3.1.2",
     "d3": "^5.16.0",
     "d3-array": "^2.4.0",
+    "d3-geo": "^1.12.0",
+    "d3-geo-projection": "^2.9.0",
     "rxjs": "~6.5.1",
     "three": "^0.116.1",
     "tslib": "^1.9.0",
+    "versor": "^0.1.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
